--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
     <title>Conference Tracker</title>
 </head>
 
 <body>
     <div id="app"></div>
-    <script src="/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
